--- a/about-2.html
+++ b/about-2.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
-    />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -18,50 +17,41 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png"
-    />
+      href="images/logo/apple-touch-icon-57x57.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png"
-    />
+      href="images/logo/apple-touch-icon-72x72.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png"
-    />
+      href="images/logo/apple-touch-icon-76x76.png" />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png"
-    />
+      href="images/logo/apple-touch-icon-114x114.png" />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png"
-    />
+      href="images/logo/apple-touch-icon-120x120.png" />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png"
-    />
+      href="images/logo/apple-touch-icon-144x144.png" />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png"
-    />
+      href="images/logo/apple-touch-icon-152x152.png" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png"
-    />
+      href="images/logo/apple-touch-icon-180x180.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -82,8 +72,7 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"
-      ></div>
+        style="background-image: url('images/icon/preeloader.gif')"></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -276,8 +265,7 @@
     <!-- Page Header Start !-->
     <div
       class="page-breadcrumb-area page-bg"
-      style="background-image: url('images/hero-section/slider-2.jpg')"
-    >
+      style="background-image: url('images/hero-section/slider-2.jpg')">
       <div class="page-overlay"></div>
       <div class="shape">
         <img src="images/shape/slider-2.png" alt="breadcrumb-shape" />
@@ -291,8 +279,9 @@
           <div class="col-md-12">
             <div
               class="breadcrumb-wrapper py-215 my-95 mx-90"
-              style="background-image: url(images/hero-section/v-2/image-1.jpg)"
-            >
+              style="
+                background-image: url(images/hero-section/v-2/image-1.jpg);
+              ">
               <div class="breadcrumb-list">
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -326,13 +315,11 @@
                   <div class="main-img">
                     <img
                       src="images/image-card/img-2.jpg"
-                      alt="about card img"
-                    />
+                      alt="about card img" />
                     <div class="shape">
                       <img
                         src="images/shape/image-card-shape-2.png"
-                        alt="image-card-shape"
-                      />
+                        alt="image-card-shape" />
                     </div>
                   </div>
                 </div>
@@ -429,8 +416,7 @@
           <div class="room-card-wrapper">
             <div
               class="room-card"
-              style="background-image: url(images/room-card/img-1.jpg)"
-            >
+              style="background-image: url(images/room-card/img-1.jpg)">
               <div class="booking-btn">
                 <a href="#">Book Now</a>
               </div>
@@ -460,8 +446,7 @@
             </div>
             <div
               class="room-card"
-              style="background-image: url(images/room-card/img-2.jpg)"
-            >
+              style="background-image: url(images/room-card/img-2.jpg)">
               <div class="booking-btn">
                 <a href="#">Book Now</a>
               </div>
@@ -491,8 +476,7 @@
             </div>
             <div
               class="room-card"
-              style="background-image: url(images/room-card/img-3.jpg)"
-            >
+              style="background-image: url(images/room-card/img-3.jpg)">
               <div class="booking-btn">
                 <a href="#">Book Now</a>
               </div>
@@ -522,8 +506,7 @@
             </div>
             <div
               class="room-card"
-              style="background-image: url(images/room-card/img-4.jpg)"
-            >
+              style="background-image: url(images/room-card/img-4.jpg)">
               <div class="booking-btn">
                 <a href="#">Book Now</a>
               </div>
@@ -553,8 +536,7 @@
             </div>
             <div
               class="room-card"
-              style="background-image: url(images/room-card/img-1.jpg)"
-            >
+              style="background-image: url(images/room-card/img-1.jpg)">
               <div class="booking-btn">
                 <a href="#">Book Now</a>
               </div>
@@ -589,8 +571,7 @@
       <!-- Hotel Facilities Start -->
       <div
         class="service-area style-1 py-140"
-        style="background-image: url(images/section-bg/service-area.jpg)"
-      >
+        style="background-image: url(images/section-bg/service-area.jpg)">
         <div class="container">
           <div class="section-title mb-0 style-2">
             <div class="sec-content">
@@ -606,8 +587,7 @@
                   <div class="icon">
                     <img
                       src="images/icon/info-card/v-1/yellow-car.png"
-                      alt="icon"
-                    />
+                      alt="icon" />
                   </div>
                   <div class="content">
                     <h3 class="title">Parking Space</h3>
@@ -624,8 +604,7 @@
                   <div class="icon">
                     <img
                       src="images/icon/info-card/v-1/yellow-bed.png"
-                      alt="icon"
-                    />
+                      alt="icon" />
                   </div>
                   <div class="content">
                     <h3 class="title">Room Service</h3>
@@ -642,8 +621,7 @@
                   <div class="icon">
                     <img
                       src="images/icon/info-card/v-1/laptop.png"
-                      alt="icon"
-                    />
+                      alt="icon" />
                   </div>
                   <div class="content">
                     <h3 class="title">WIFI Facility</h3>
@@ -675,8 +653,7 @@
                   <div class="icon">
                     <img
                       src="images/icon/info-card/v-1/swimming-pool.png"
-                      alt="icon"
-                    />
+                      alt="icon" />
                   </div>
                   <div class="content">
                     <h3 class="title">Swimming Pool</h3>
@@ -693,8 +670,7 @@
                   <div class="icon">
                     <img
                       src="images/icon/info-card/v-1/location.png"
-                      alt="icon"
-                    />
+                      alt="icon" />
                   </div>
                   <div class="content">
                     <h3 class="title">Pick Up & Drop</h3>
@@ -729,29 +705,19 @@
                 <form class="mt-16">
                   <div class="form-group">
                     <label for="checkin">Check In:</label>
-                    <div class="date-container">
+                    <div class="datepicker">
                       <i class="fas fa-calendar-alt" id="calendar-icon"></i>
-                      <input
-                        type="date"
-                        class="date-input"
-                        id="checkin"
-                        name="checkin"
-                        required
-                      />
+                      <input type="text" placeholder="yyyy/mm/dd" />
+                      <input type="date" />
                     </div>
                   </div>
 
                   <div class="form-group">
                     <label for="checkout">Check Out:</label>
-                    <div class="date-container">
+                    <div class="datepicker">
                       <i class="fas fa-calendar-alt" id="calendar-icon"></i>
-                      <input
-                        type="date"
-                        class="date-input"
-                        id="checkout"
-                        name="checkout"
-                        required
-                      />
+                      <input type="text" placeholder="yyyy/mm/dd" />
+                      <input type="date" />
                     </div>
                   </div>
 
@@ -786,13 +752,11 @@
                         <div class="main-img">
                           <img
                             src="images/image-card/img-3.jpg"
-                            alt="about card img"
-                          />
+                            alt="about card img" />
                           <div class="shape">
                             <img
                               src="images/shape/image-card-shape-4.png"
-                              alt="image-card-shape"
-                            />
+                              alt="image-card-shape" />
                           </div>
                         </div>
                       </div>
@@ -845,8 +809,7 @@
       <!-- Brand Slider Area Start -->
       <div
         class="brand-slider-area style-1 py-65"
-        style="background-image: url(images/shape/client-slider.png)"
-      >
+        style="background-image: url(images/shape/client-slider.png)">
         <div class="container">
           <div class="client-logo-slider-wrapper">
             <div class="client-logo">
@@ -872,8 +835,7 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-2"
-      style="background-image: url('images/section-bg/footer-1.png')"
-    >
+      style="background-image: url('images/section-bg/footer-1.png')">
       <div class="overlay"></div>
       <div class="bottom-image">
         <img src="images/logo/logo-text.png" alt="footer background" />
@@ -888,8 +850,7 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo"
-                      />
+                        alt="Footer Logo" />
                     </a>
                   </div>
                   <div class="footer-contact mt-90">
@@ -929,56 +890,46 @@
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-1.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-2.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-3.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-4.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
                 <div class="single-instagram-feed">
                   <img
                     class="icon"
                     src="images/icon/instagram.svg"
-                    alt="instagram"
-                  />
+                    alt="instagram" />
                   <img
                     src="images/instagram/instagram-5.jpg"
-                    alt="instagram photo"
-                  />
+                    alt="instagram photo" />
                 </div>
               </div>
             </div>
