--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="description" content="Hotex Luxury Hotel HTML5 Template" />
     <meta
       name="keywords"
-      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup"
-    />
+      content="agency, company, data, digital, innovation, innovative, it, modern, saas, start-up, startup" />
     <meta name="author" content="Hotex Luxury Hotel" />
 
     <title>Hotex Luxury Hotel HTML5 Template</title>
@@ -18,50 +17,41 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/logo/apple-touch-icon-57x57.png"
-    />
+      href="images/logo/apple-touch-icon-57x57.png" />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/logo/apple-touch-icon-72x72.png"
-    />
+      href="images/logo/apple-touch-icon-72x72.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/logo/apple-touch-icon-76x76.png"
-    />
+      href="images/logo/apple-touch-icon-76x76.png" />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/logo/apple-touch-icon-114x114.png"
-    />
+      href="images/logo/apple-touch-icon-114x114.png" />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/logo/apple-touch-icon-120x120.png"
-    />
+      href="images/logo/apple-touch-icon-120x120.png" />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/logo/apple-touch-icon-144x144.png"
-    />
+      href="images/logo/apple-touch-icon-144x144.png" />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/logo/apple-touch-icon-152x152.png"
-    />
+      href="images/logo/apple-touch-icon-152x152.png" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/logo/apple-touch-icon-180x180.png"
-    />
+      href="images/logo/apple-touch-icon-180x180.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -83,8 +73,7 @@
     <div id="preloader">
       <div
         id="preloader-status"
-        style="background-image: url('images/icon/preeloader.gif')"
-      ></div>
+        style="background-image: url('images/icon/preeloader.gif')"></div>
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
@@ -228,8 +217,7 @@
     <!-- Slider Section Start !-->
     <div
       class="slider-area style-1 bg-gray-100"
-      style="background-image: url(images/hero-section/v-1/img-1.jpg)"
-    >
+      style="background-image: url(images/hero-section/v-1/img-1.jpg)">
       <div class="shape">
         <img src="images/hero-section/logo-shape.png" alt="hotex" />
       </div>
@@ -264,8 +252,7 @@
                     <div class="slider-image-inner">
                       <img
                         src="images/hero-section/hero-1.png"
-                        alt="feature image"
-                      />
+                        alt="feature image" />
                     </div>
                   </div>
                 </div>
@@ -279,8 +266,7 @@
           <div class="single-slider">
             <div class="container">
               <div
-                class="row h-100 align-items-lg-center align-items-xxl-start"
-              >
+                class="row h-100 align-items-lg-center align-items-xxl-start">
                 <div class="col-12 col-lg-7 col-xxl-6 order-2 order-md-1">
                   <div class="slider-content-wrapper">
                     <div class="slider-content">
@@ -306,8 +292,7 @@
                     <div class="slider-image-inner">
                       <img
                         src="images/hero-section/small-hero-1.jpg"
-                        alt="feature image"
-                      />
+                        alt="feature image" />
                     </div>
                   </div>
                 </div>
@@ -321,8 +306,7 @@
           <div class="single-slider">
             <div class="container">
               <div
-                class="row h-100 align-items-lg-center align-items-xxl-start"
-              >
+                class="row h-100 align-items-lg-center align-items-xxl-start">
                 <div class="col-12 col-lg-7 col-xxl-6 order-2 order-md-1">
                   <div class="slider-content-wrapper">
                     <div class="slider-content">
@@ -348,8 +332,7 @@
                     <div class="slider-image-inner">
                       <img
                         src="images/hero-section/small-hero-1.jpg"
-                        alt="feature image"
-                      />
+                        alt="feature image" />
                     </div>
                   </div>
                 </div>
@@ -366,30 +349,20 @@
               <!-- Check-In Date -->
               <div class="input-wrapper">
                 <label for="checkin">Check-In:</label>
-                <div class="date-container">
-                  <i class="fas fa-calendar-alt" id="calendar-icon"></i>
-                  <input
-                    type="date"
-                    class="date-input"
-                    id="checkin"
-                    name="checkin"
-                    required
-                  />
+                <div class="datepicker">
+                  <i class="fas fa-calendar-alt"></i>
+                  <input type="text" placeholder="yyyy/mm/dd" />
+                  <input type="date" />
                 </div>
               </div>
 
               <!-- Check-Out Date -->
               <div class="input-wrapper">
                 <label for="checkout">Check-Out:</label>
-                <div class="date-container">
-                  <i class="fas fa-calendar-alt" id="calendar-icon"></i>
-                  <input
-                    type="date"
-                    class="date-input"
-                    id="checkout"
-                    name="checkout"
-                    required
-                  />
+                <div class="datepicker">
+                  <i class="fas fa-calendar-alt"></i>
+                  <input type="text" placeholder="yyyy/mm/dd" />
+                  <input type="date" />
                 </div>
               </div>
 
@@ -434,14 +407,12 @@
                   <div class="shape">
                     <img
                       src="images/shape/image-card-shape.png"
-                      alt="image-card-shape"
-                    />
+                      alt="image-card-shape" />
                   </div>
                   <div class="video-popup-btn">
                     <a
                       href="https://www.youtube.com/watch?v=SZEflIVnhH8"
-                      class="mfp-iframe video-play"
-                    >
+                      class="mfp-iframe video-play">
                       <i class="fa-solid fa-play" aria-hidden="true"></i>
                     </a>
                   </div>
@@ -561,8 +532,7 @@
         <div class="room-card-wrapper">
           <div
             class="room-card"
-            style="background-image: url(images/room-card/img-1.jpg)"
-          >
+            style="background-image: url(images/room-card/img-1.jpg)">
             <div class="booking-btn">
               <a href="#">Book Now</a>
             </div>
@@ -592,8 +562,7 @@
           </div>
           <div
             class="room-card"
-            style="background-image: url(images/room-card/img-2.jpg)"
-          >
+            style="background-image: url(images/room-card/img-2.jpg)">
             <div class="booking-btn">
               <a href="#">Book Now</a>
             </div>
@@ -623,8 +592,7 @@
           </div>
           <div
             class="room-card"
-            style="background-image: url(images/room-card/img-3.jpg)"
-          >
+            style="background-image: url(images/room-card/img-3.jpg)">
             <div class="booking-btn">
               <a href="#">Book Now</a>
             </div>
@@ -654,8 +622,7 @@
           </div>
           <div
             class="room-card"
-            style="background-image: url(images/room-card/img-4.jpg)"
-          >
+            style="background-image: url(images/room-card/img-4.jpg)">
             <div class="booking-btn">
               <a href="#">Book Now</a>
             </div>
@@ -685,8 +652,7 @@
           </div>
           <div
             class="room-card"
-            style="background-image: url(images/room-card/img-1.jpg)"
-          >
+            style="background-image: url(images/room-card/img-1.jpg)">
             <div class="booking-btn">
               <a href="#">Book Now</a>
             </div>
@@ -722,8 +688,7 @@
     <!-- Hotel Facilities Start -->
     <div
       class="service-area style-1 py-140"
-      style="background-image: url(images/section-bg/service-area.jpg)"
-    >
+      style="background-image: url(images/section-bg/service-area.jpg)">
       <div class="container">
         <div class="section-title mb-0 style-2">
           <div class="sec-content">
@@ -739,8 +704,7 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/v-1/yellow-car.png"
-                    alt="icon"
-                  />
+                    alt="icon" />
                 </div>
                 <div class="content">
                   <h3 class="title">Parking Space</h3>
@@ -757,8 +721,7 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/v-1/yellow-bed.png"
-                    alt="icon"
-                  />
+                    alt="icon" />
                 </div>
                 <div class="content">
                   <h3 class="title">Room Service</h3>
@@ -805,8 +768,7 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/v-1/swimming-pool.png"
-                    alt="icon"
-                  />
+                    alt="icon" />
                 </div>
                 <div class="content">
                   <h3 class="title">Swimming Pool</h3>
@@ -823,8 +785,7 @@
                 <div class="icon">
                   <img
                     src="images/icon/info-card/v-1/location.png"
-                    alt="icon"
-                  />
+                    alt="icon" />
                 </div>
                 <div class="content">
                   <h3 class="title">Pick Up & Drop</h3>
@@ -860,8 +821,7 @@
                   <div class="shape">
                     <img
                       src="images/shape/image-card-shape-2.png"
-                      alt="image-card-shape"
-                    />
+                      alt="image-card-shape" />
                   </div>
                 </div>
               </div>
@@ -931,8 +891,7 @@
           class="inner-wrapper pt-80 pb-72"
           style="
             background-image: url(images/section-bg/feature-facilities.jpg);
-          "
-        >
+          ">
           <div class="shape">
             <img src="images/shape/image-card-shape-3.png" alt="shape" />
           </div>
@@ -1051,8 +1010,7 @@
               <div class="image-wrapper">
                 <img
                   src="images/team-member/v-1/image-1.jpg"
-                  alt="team member"
-                />
+                  alt="team member" />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -1083,8 +1041,7 @@
               <div class="image-wrapper">
                 <img
                   src="images/team-member/v-1/image-2.jpg"
-                  alt="team member"
-                />
+                  alt="team member" />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -1115,8 +1072,7 @@
               <div class="image-wrapper">
                 <img
                   src="images/team-member/v-1/image-3.jpg"
-                  alt="team member"
-                />
+                  alt="team member" />
                 <div class="overlay"></div>
               </div>
               <div class="content-wrapper">
@@ -1146,6 +1102,7 @@
       </div>
     </div>
     <!-- Team area end -->
+
     <!-- Booking-area Start -->
     <div class="booking-area pt-70">
       <div class="container">
@@ -1165,29 +1122,19 @@
               <form class="mt-16">
                 <div class="form-group">
                   <label for="checkin">Check In:</label>
-                  <div class="date-container">
+                  <div class="datepicker">
                     <i class="fas fa-calendar-alt" id="calendar-icon"></i>
-                    <input
-                      type="date"
-                      class="date-input"
-                      id="checkin"
-                      name="checkin"
-                      required
-                    />
+                    <input type="text" placeholder="yyyy/mm/dd" />
+                    <input type="date" />
                   </div>
                 </div>
 
                 <div class="form-group">
                   <label for="checkout">Check Out:</label>
-                  <div class="date-container">
+                  <div class="datepicker">
                     <i class="fas fa-calendar-alt" id="calendar-icon"></i>
-                    <input
-                      type="date"
-                      class="date-input"
-                      id="checkout"
-                      name="checkout"
-                      required
-                    />
+                    <input type="text" placeholder="yyyy/mm/dd" />
+                    <input type="date" />
                   </div>
                 </div>
 
@@ -1222,13 +1169,11 @@
                       <div class="main-img">
                         <img
                           src="images/image-card/img-3.jpg"
-                          alt="about card img"
-                        />
+                          alt="about card img" />
                         <div class="shape">
                           <img
                             src="images/shape/image-card-shape-4.png"
-                            alt="image-card-shape"
-                          />
+                            alt="image-card-shape" />
                         </div>
                       </div>
                     </div>
@@ -1408,8 +1353,7 @@
     <!--- Start Footer !-->
     <footer
       class="footer style-1"
-      style="background-image: url('images/section-bg/footer-1.png')"
-    >
+      style="background-image: url('images/section-bg/footer-1.png')">
       <div class="overlay"></div>
       <div class="square-shape">
         <div class="inner"></div>
@@ -1427,8 +1371,7 @@
                     <a href="index.html">
                       <img
                         src="images/logo/footer-logo.png"
-                        alt="Footer Logo"
-                      />
+                        alt="Footer Logo" />
                     </a>
                   </div>
                   <p>
@@ -1524,8 +1467,7 @@
                           <div class="single-field">
                             <input
                               type="email"
-                              placeholder="Enter Your Email"
-                            />
+                              placeholder="Enter Your Email" />
                           </div>
                           <button class="submit-btn" type="submit">
                             <i class="fa-solid fa-paper-plane"></i>
